packages/cli/tests/fixtures/errors/duplicate/alert/types.ts
import type { VariantProps } from "jade-garden";
import type { alertStyles } from ".";

export type Variants = VariantProps<typeof alertStyles>;
